--- a/app/src/main/res/layout/activity_dispaly_data.xml
+++ b/app/src/main/res/layout/activity_dispaly_data.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userlist">
+    tools:context=".DispalyData">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerviews"
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
