--- a/app/src/main/res/layout/singledata.xml
+++ b/app/src/main/res/layout/singledata.xml
@@ -12,6 +12,7 @@
         android:layout_height="130dp"
         android:padding="15dp"
         android:background="@drawable/download">
+
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
 
             android:id="@+id/imageView"
@@ -24,58 +25,56 @@
 
 
         <TextView
-            android:id="@+id/nametext"
+            android:id="@+id/name"
 
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
 
-            android:text="User Name"
             android:layout_toRightOf="@id/imageView"
+            android:text="User name"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/addrs"
+            android:id="@+id/number"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+
             android:layout_marginLeft="5dp"
-
-            android:layout_toRightOf="@id/imageView"
-            android:layout_below="@id/nametext"
-            android:text="address"
-            android:textStyle="bold"
-
-            />
-
-        <TextView
-            android:id="@+id/numbr"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/addrs"
-            android:layout_marginLeft="5dp"
-
             android:layout_toRightOf="@id/imageView"
             android:text="number"
             android:textStyle="bold"
-             />
+
+            />
 
         <TextView
-            android:id="@+id/catagory"
+            android:id="@+id/address"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/numbr"
-            android:layout_toRightOf="@id/imageView"
-            android:text="Category"
+            android:layout_below="@id/number"
             android:layout_marginLeft="5dp"
 
-            android:textStyle="bold"
-            />
+            android:layout_toRightOf="@id/imageView"
+            android:text="address"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/address"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/imageView"
+            android:text="Category"
+
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/remarks"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/catagory"
+            android:layout_below="@id/category"
             android:layout_toRightOf="@id/imageView"
             android:layout_marginLeft="5dp"
 
@@ -90,25 +89,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/buttonEditstudent"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <Button
+            android:id="@+id/txt_btn_edit"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_gravity="end"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_edit_black_24dp"
             android:text="Edit"
             android:tint="#3700B3" />
 
-        <ImageView
-            android:id="@+id/buttonDeleteStudent"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/txt_btn_delete"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_gravity="right"
-            android:layout_margin="20dp"
-            android:layout_toRightOf="@id/numbr"
-
-            android:src="@drawable/ic_delete_black_24dp"
+            android:layout_margin="10dp"
             android:text="Delete"
             android:tint="#3700B3" />
 
