--- a/app/src/main/res/layout/activity_clinte.xml
+++ b/app/src/main/res/layout/activity_clinte.xml
@@ -118,22 +118,50 @@
         android:layout_below="@+id/city"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white" /><![CDATA[
     />
 
+
+
+
+
+
+
+
+
+
+
+    ]]>
+
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/sumite_clinte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/remarks"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="12dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="263dp"
         android:text="Submit"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
-
-
+    <Button
+        android:id="@+id/show_clinte"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sumite_clinte"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="-45dp"
+        android:layout_marginEnd="109dp"
+        android:text="Submit"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
 
 </RelativeLayout>
