recyclerview on casee

--- a/app/src/main/res/layout/singledata_casee.xml
+++ b/app/src/main/res/layout/singledata_casee.xml
@@ -15,7 +15,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
 
-            android:id="@+id/imageView"
+            android:id="@+id/imageView_casee"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:foregroundGravity="center"
@@ -25,53 +25,64 @@
 
 
         <TextView
-            android:id="@+id/name_single"
+            android:id="@+id/casee_status_casee"
 
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
 
             android:layout_toRightOf="@id/imageView"
-            android:text="User name"
+            android:text="casee status"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/number"
+            android:id="@+id/clinte_name_casee"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/name_single"
 
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
-            android:text="number"
+            android:text="clinte name"
             android:textStyle="bold"
 
             />
 
         <TextView
-            android:id="@+id/address"
+            android:id="@+id/casee_number_casee"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/number"
             android:layout_marginLeft="5dp"
 
             android:layout_toRightOf="@id/imageView"
-            android:text="address"
+            android:text="casee number"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/category"
+            android:id="@+id/casee_name_casee"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/address"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
-            android:text="Category"
+            android:text="casee name"
 
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/remarks"
+            android:id="@+id/casee_data_casee"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/category"
+            android:layout_toRightOf="@id/imageView"
+            android:layout_marginLeft="5dp"
+
+            android:text="casee date"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/remarks_casee_layout"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/category"
@@ -80,7 +91,7 @@
 
             android:text="Remarks"
             android:textStyle="bold"
-             />
+            />
 
     </RelativeLayout>
     <LinearLayout
@@ -90,7 +101,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/txt_btn_edit"
+            android:id="@+id/txt_btn_edit_casee"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:layout_gravity="end"
@@ -99,7 +110,7 @@
             android:tint="#3700B3" />
 
         <Button
-            android:id="@+id/txt_btn_delete"
+            android:id="@+id/txt_btn_delete_casee"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:layout_gravity="right"
