--- a/app/src/main/res/layout/activity_casee.xml
+++ b/app/src/main/res/layout/activity_casee.xml
@@ -25,7 +25,7 @@
 
 
     <EditText
-        android:id="@+id/casestatus"
+        android:id="@+id/casestatus_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -41,10 +41,10 @@
         android:textColorHint="@color/white" />
 
     <EditText
-        android:id="@+id/clientname"
+        android:id="@+id/clientname_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casestatus"
+        android:layout_below="@+id/casestatus_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -57,10 +57,10 @@
         android:textColorHint="@color/white" />
 
     <EditText
-        android:id="@+id/casenumber"
+        android:id="@+id/casenumber_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/clientname"
+        android:layout_below="@+id/clientname_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -73,10 +73,10 @@
         android:textColorHint="@color/white" />
 
     <EditText
-        android:id="@+id/casename"
+        android:id="@+id/casename_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casenumber"
+        android:layout_below="@+id/casenumber_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -89,10 +89,10 @@
         android:textColorHint="@color/white" />
 
     <EditText
-        android:id="@+id/casedate"
+        android:id="@+id/casedate_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casename"
+        android:layout_below="@+id/casename_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -105,10 +105,10 @@
         android:textColorHint="@color/white" />
 
     <EditText
-        android:id="@+id/remarks"
+        android:id="@+id/remarks_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casedate"
+        android:layout_below="@+id/casedate_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -125,15 +125,31 @@
         android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/remarks"
+        android:layout_below="@+id/remarks_casee"
         android:layout_centerInParent="true"
         android:layout_marginTop="12dp"
         android:text="Submit"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
+    <Button
+        android:id="@+id/button_showdata_casee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_login"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:text="Submit"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
-
+    <Button
+        android:id="@+id/edit_btn_casee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Edit"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
