--- a/app/src/main/res/layout/activity_casee.xml
+++ b/app/src/main/res/layout/activity_casee.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".casee"
     android:background="@drawable/download"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="100dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
         android:background="#30ffffff"
@@ -44,7 +43,6 @@
         android:id="@+id/clientname_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casestatus_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -60,7 +58,6 @@
         android:id="@+id/casenumber_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/clientname_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -76,7 +73,6 @@
         android:id="@+id/casename_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casenumber_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -92,7 +88,6 @@
         android:id="@+id/casedate_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casename_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -108,7 +103,6 @@
         android:id="@+id/remarks_casee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/casedate_casee"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -119,37 +113,36 @@
         android:padding="15dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
-        />
 
-    <Button
-        android:id="@+id/button_login"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/remarks_casee"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="12dp"
-        android:text="Submit"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_showdata_casee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button_login"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="12dp"
-        android:text="Submit"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        <Button
+            android:id="@+id/button_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_weight="1"
+            android:text="Submit" />
 
-    <Button
-        android:id="@+id/edit_btn_casee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Edit"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/button_showdata_casee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_weight="1"
+            android:text="View data" />
+
+        <Button
+            android:id="@+id/edit_btn_casee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Edit"
+            android:visibility="gone" />
+    </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
