--- a/app/src/main/res/layout/singledata_sch.xml
+++ b/app/src/main/res/layout/singledata_sch.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="150dp"
         android:padding="15dp"
         android:background="@drawable/download">
 
@@ -26,12 +26,11 @@
 
         <TextView
             android:id="@+id/casee_status_sch"
-
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
 
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/imageView_casee"
             android:text="casee status"
             android:textStyle="bold" />
 
@@ -39,10 +38,10 @@
             android:id="@+id/clinte_name_sch"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/name_single"
+            android:layout_below="@id/casee_status_sch"
 
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/imageView_casee"
             android:text="clinte name"
             android:textStyle="bold"
 
@@ -52,10 +51,10 @@
             android:id="@+id/casee_number_sch"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/number"
+            android:layout_below="@id/clinte_name_sch"
             android:layout_marginLeft="5dp"
 
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/imageView_casee"
             android:text="casee number"
             android:textStyle="bold" />
 
@@ -63,9 +62,9 @@
             android:id="@+id/casee_name_sch"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/address"
+            android:layout_below="@id/casee_number_sch"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/imageView_casee"
             android:text="casee name"
 
             android:textStyle="bold" />
@@ -74,8 +73,8 @@
             android:id="@+id/casee_data_sch"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/category"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_below="@id/casee_name_sch"
+            android:layout_toRightOf="@id/imageView_casee"
             android:layout_marginLeft="5dp"
 
             android:text="casee date"
@@ -85,10 +84,9 @@
             android:id="@+id/remarks_casee_layout_sch"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/category"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_below="@id/casee_data_sch"
+            android:layout_toRightOf="@id/imageView_casee"
             android:layout_marginLeft="5dp"
-
             android:text="Remarks"
             android:textStyle="bold"
             />
