--- a/app/src/main/res/layout/sinflrdata_clinte.xml
+++ b/app/src/main/res/layout/sinflrdata_clinte.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="150dp"
         android:padding="15dp"
         android:background="@drawable/download">
 
@@ -39,11 +39,11 @@
             android:id="@+id/email_clinte"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/name"
+            android:layout_below="@id/name_clinte"
 
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
-            android:text="number"
+            android:text="email"
             android:textStyle="bold"
 
             />
@@ -52,31 +52,31 @@
             android:id="@+id/number_clinte"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/number"
+            android:layout_below="@id/email_clinte"
             android:layout_marginLeft="5dp"
 
             android:layout_toRightOf="@id/imageView"
-            android:text="address"
+            android:text="number"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/address_clinte"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/address"
+            android:layout_below="@id/number_clinte"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
-            android:text="Category"
+            android:text="address"
 
             android:textStyle="bold" />
         <TextView
             android:id="@+id/city_clinte"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/address"
+            android:layout_below="@id/address_clinte"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/imageView"
-            android:text="Category"
+            android:text="city"
 
             android:textStyle="bold" />
 
@@ -84,13 +84,12 @@
             android:id="@+id/remarks_clinte"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/category"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_below="@id/city_clinte"
             android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/imageView"
 
             android:text="Remarks"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
     </RelativeLayout>
     <LinearLayout
