--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -15,6 +15,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text="Dashboard"
             android:textColor="@color/white"
             android:textSize="40dp"
@@ -254,17 +255,18 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/fingureprint" />
+                                android:src="@drawable/ic_baseline_contact_support_24" />
+
                             <TextView
+                                android:id="@+id/txt6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/txt6"
-                                android:text="Evidance"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                android:layout_centerInParent="true"
                                 android:layout_below="@+id/img6"
-                                android:layout_marginTop="10dp"/>
+                                android:layout_centerInParent="true"
+                                android:layout_marginTop="10dp"
+                                android:text="Contact us"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
@@ -274,11 +276,11 @@
 
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
@@ -289,66 +291,30 @@
                         app:cardCornerRadius="20dp">
 
 
-
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
                             <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
                                 android:id="@+id/img7"
-                                android:layout_centerInParent="true"
-                                android:src="@drawable/notebook"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/txt7"
-                                android:text="Note"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                android:layout_centerInParent="true"
-                                android:layout_below="@+id/img7"
-                                android:layout_marginTop="10dp"/>
-
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="0dp"
-                        android:layout_height="160dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="20dp">
-
-
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:id="@+id/img8"
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/book" />
+                                android:src="@drawable/ic_baseline_info_24" />
+
                             <TextView
+                                android:id="@+id/txt7"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/txt8"
-                                android:text="Handbook"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
+                                android:layout_below="@+id/img7"
                                 android:layout_centerInParent="true"
-                                android:layout_below="@+id/img8"
-                                android:layout_marginTop="10dp"/>
+                                android:layout_marginTop="10dp"
+                                android:text="About us"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
-
-
-
 
 
                 </LinearLayout>
